<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="music_type_my_favorite">My favorite</string>
    <string name="app_name">Bj4 music player</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="paly_next">Play next</string>
    <string name="paly_previous">Play previous</string>
    <string name="paly">Play</string>
    <string name="pause">Pause</string>
    <string name="play_or_pause">Play or pause</string>
    <string name="option_download_data">Download all data</string>
    <string name="option_theme">Select theme</string>
    <string name="option_settings">Settings</string>
    <string name="option_share">Share playing music</string>
    <string name="option_no_ads">No ads version</string>
    <string name="option_sleep_mode">Sleep mode</string>
    <string name="exit">Exit</string>
    <string name="settings_high">High</string>
    <string name="settings_low">Low</string>
    <string name="settings_optimize">Optimize</string>
    <string name="settings_normal">Normal</string>
    <string name="settings_hide_status">Hide</string>
    <string name="settings_show_status">Show</string>
    <string name="settings_allow_3g_update">Allow</string>
    <string name="settings_disallow_3g_update">Disallow</string>
    <string name="settings_music_quality_title">Quality</string>
    <string name="settings_music_quality_info">Music play quality</string>
    <string name="settings_optimize_parsing_title">Optimize parsing</string>
    <string name="settings_optimize_parsing_info">Get results more accurate</string>
    <string name="settings_show_status_bar_title">Visibility of status bar</string>
    <string name="settings_show_status_bar_info">Get more detail status on the bottom of screen</string>
    <string name="settings_allow_3g_update_title">Updating option</string>
    <string name="settings_allow_3g_update_info">Allowing update data when using 3g</string>
    <string name="settings_data_source_title">Data source</string>
    <string name="settings_data_source_info">More data source</string>
    <string name="settings_headset_notification_title">Show start notification</string>
    <string name="settings_headset_notification_info">Show start notification when headset on</string>
    <string name="share_chooser_title">"Share music to ..."</string>
    <string name="share_string_former">"I am using Bj4 music player to listen to the "</string>
    <string name="share_string_rear">". Join me now and let us have fun together!\n"</string>
    <string name="dialog_alarm_3g_update">"Using 3g to update data?"</string>
    <string name="simple_play_widget_none_playinfo">"Let's rock now!"</string>
    <string name="toast_add_into_favorite"> has been added into favorite list</string>
    <string name="toast_remove_from_favorite"> has been removed from favorite list</string>
    <string name="spider_service_taost_start_to_scan">Start to scan music!</string>
    <string name="ok">@android:string/ok</string>
    <string name="cancel">@android:string/cancel</string>
    <string name="play_main_update_dialog_update">Update</string>
    <string name="play_main_update_dialog_update_text">"Do you want to update "</string>
    <string name="songs">Songs</string>
    <string name="tab_local_music">Local music</string>
    <string name="tab_web_music">Web music</string>

</resources>