<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/settings_items_bg"
            android:gravity="center"
            android:orientation="vertical" >

            <ToggleButton
                android:id="@+id/music_quality_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="5dp"
                android:background="@drawable/toggle_btn_bg"
                android:textOff="@string/settings_low"
                android:textOn="@string/settings_high" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:background="@color/theme_navy_play_list_light_bg_unpress" >
            </View>

            <ToggleButton
                android:id="@+id/optimize_parsing_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="5dp"
                android:background="@drawable/toggle_btn_bg"
                android:textOff="@string/settings_normal"
                android:textOn="@string/settings_optimize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/settings_items_bg"
            android:gravity="center"
            android:orientation="vertical" >

            <ToggleButton
                android:id="@+id/show_status_bar_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="5dp"
                android:background="@drawable/toggle_btn_bg"
                android:textOff="@string/settings_hide_status"
                android:textOn="@string/settings_show_status" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>